--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Balloon Pop Game — Confetti from Balloon</title>
+    <title>Merry Christmas</title></title>
     <style>
       :root {
         --bg: #fbf4e6;
@@ -237,7 +237,7 @@
         class="balloon"
         id="b1"
         style="background: #ff6b81; transform: rotate(-30deg)"
-        data-message="Wishing you a Happy Birthday, More Birthdays to come!!!"
+        data-message="Merry Christmas!! Enjoy your day today I hope you have a great time"
       >
         <div class="string"></div>
       </div>
@@ -247,7 +247,7 @@
         class="balloon"
         id="b2"
         style="background: #dff0f8"
-        data-message="Happy Birtday!!! Live your life at your fullest"
+        data-message="Merry Christmas po, Sana maka hingi ako ng Graham or kahit ano man XD pero don't forget to spend some time with yow family"
       >
         <div class="string"></div>
       </div>
@@ -257,7 +257,7 @@
         class="balloon"
         id="b3"
         style="background: #ffd36b; transform: rotate(30deg)"
-        data-message="Enjoy your year, this is your time to shine!! "
+        data-message="Maligayang Pasko!!!! Have a great day namamasko po ako pa PM na lang po if magbibigay 😁😁 Thank you!! 
       >
         <div class="string"></div>
       </div>
