--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         class="balloon"
         id="b3"
         style="background: #ffd36b; transform: rotate(30deg)"
-        data-message="Maligayang Pasko!!!! Have a great day namamasko po ako pa PM na lang po if magbibigay 😁😁 Thank you!! 
+        data-message="Maligayang Pasko!!!! Have a great day namamasko po ako pa PM na lang po if magbibigay 😁😁 Thank you!!"
       >
         <div class="string"></div>
       </div>
@@ -271,7 +271,7 @@
         style="font-size: 18px; font-weight: 600; margin: 0 0 8px"
       ></p>
       <p style="margin: 0 0 12px; color: #555">
-        Here's a little note just for you.
+        THANKS FOR YOUR TIME😁 APPRECIATE IT! 
       </p>
       <button class="close-btn" id="close-btn">Thank you</button>
     </div>
